--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -11,6 +11,9 @@
     <h1>- Celine Schiebel -</h1>
     <div class="task">
         <div class="headline"><b>Aufgaben:</b></div>
+        <br>
+        <p><a href="https://celine333.github.io/EIA_2/Aufgabe_01/Aufgabe_01.pdf" target="_blank">Aufgabe01_pdf |</a>
+        <a href="https://celine333.github.io/EIA_2/Aufgabe_01/boxes.html" target="_blank">Aufgabe01_html</a></p>
     </div>
     <div class="square">
         <div class="text">
