--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,7 @@
     <div class="task">
         <div class="headline"><b>Aufgaben:</b></div>
         <br>
+        <p><a href="https://github.com/celine333/EIA_2" target="_blank">Repository</a></p>
         <p><a href="https://celine333.github.io/EIA_2/Aufgabe_01/Aufgabe_01.pdf" target="_blank">Aufgabe01_pdf |</a>
         <a href="https://celine333.github.io/EIA_2/Aufgabe_01/boxes.html" target="_blank">Aufgabe01_html</a></p>
     </div>
