--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,6 +15,8 @@
         <p><a href="https://github.com/celine333/EIA_2" target="_blank">Repository</a></p>
         <p><a href="https://celine333.github.io/EIA_2/Aufgabe_01/Aufgabe_01.pdf" target="_blank">Aufgabe01_pdf |</a>
         <a href="https://celine333.github.io/EIA_2/Aufgabe_01/boxes.html" target="_blank">Aufgabe01_html</a></p>
+        <p><a href="https://celine333.github.io/EIA_2/Aufgabe_02/Memory.html" target="_blank">Aufgabe02_Konzept |</a>
+        <a href="https://celine333.github.io/EIA_2/Aufgabe_02/Konzept.pdf" target="_blank">Aufgabe02_html</a></p>
     </div>
     <div class="square">
         <div class="text">
