--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,6 +13,8 @@
         <div class="headline"><b>Aufgaben:</b></div>
         <br>
         <p><a href="https://github.com/celine333/EIA_2" target="_blank">Repository</a></p>
+        <p><a href="https://celine333.github.io/EIA_2/Aufgabe_04/Haushaltshilfe_L04.html" target="_blank">Aufgabe04_Code |</a>
+        <a href="https://celine333.github.io/EIA_2/Aufgabe_04/Konzept_Aufgabe04.pdf" target="_blank">Aufgabe04_Konzept</a></p>
         <p><a href="https://celine333.github.io/EIA_2/Aufgabe_03/Haushaltshilfe.html" target="_blank">Aufgabe03_Code |</a>
         <a href="https://celine333.github.io/EIA_2/Aufgabe_03/Konzept_Haushaltshilfe.pdf" target="_blank">Aufgabe03_Konzept</a></p>
         <p><a href="https://celine333.github.io/EIA_2/Aufgabe_02/Memory.html" target="_blank">Aufgabe02_html |</a>
