--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,6 +14,8 @@
         <br>
         <br>
         <p><a href="https://github.com/celine333/EIA_2" target="_blank">Repository</a></p>
+        <p><a href="https://celine333.github.io/EIA_2/Aufgabe_05/Konzept_Aufgabe05.pdf" target="_blank">Aufgabe05_Konzept |</a>
+        <a href="https://celine333.github.io/EIA_2/Aufgabe_05/Haushaltshilfe_L05.html" target="_blank">Aufgabe05_Code</a></p>
         <p><a href="https://celine333.github.io/EIA_2/Aufgabe_04/Haushaltshilfe_L04.html" target="_blank">Aufgabe04_Code |</a>
         <a href="https://celine333.github.io/EIA_2/Aufgabe_04/Konzept_Aufgabe04.pdf" target="_blank">Aufgabe04_Konzept</a></p>
         <p><a href="https://celine333.github.io/EIA_2/Aufgabe_03/Haushaltshilfe.html" target="_blank">Aufgabe03_Code |</a>
