--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,6 +14,8 @@
         <br>
         <br>
         <p><a href="https://github.com/celine333/EIA_2" target="_blank">Repository</a></p>
+        <p><a href="https://celine333.github.io/EIA_2/Aufgabe_10/Konzept_Aufgabe10.pdf" target="_blank">Aufgabe10_pdf |</a>
+            <a href="https://celine333.github.io/EIA_2/Aufgabe_10/Virus.html" target="_blank">Aufgabe10_html</a></p>
         <p><a href="https://celine333.github.io/EIA_2/Aufgabe_09/Konzept_Aufgabe09.pdf" target="_blank">Aufgabe09_pdf |</a>
         <a href="https://celine333.github.io/EIA_2/Aufgabe_09/Virus.html" target="_blank">Aufgabe09_html</a></p>
         <p><a href="https://celine333.github.io/EIA_2/Aufgabe_08/Konzept_Aufgabe08.pdf" target="_blank">Aufgabe08_pdf |</a>
