--- a/Abschlussarbeit/Code/index.html
+++ b/Abschlussarbeit/Code/index.html
@@ -62,22 +62,21 @@
             <h3>Latest pictures</h3>
         </div>
 
-        <form id="canvasForm">
+       
         <div class="canvassize">
             <h3>Canvas Size</h3>
-                <input type="radio" name="canvassize" value="standard" id="radio" checked>
+                <input type="radio" name="canvassize" value="standard" id="standard" checked>
                 <label for="standard">standard</label>
                 <br>
-                <input type="radio" name="canvassize" value="small" id="radio">
+                <input type="radio" name="canvassize" value="small" id="small">
                 <label for="small">small</label>
                 <br>
-                <input type="radio" name="canvassize" value="medium" id="radio">
+                <input type="radio" name="canvassize" value="medium" id="medium">
                 <label for="medium">medium</label>
                 <br>
-                <input type="radio" name="canvassize" value="large" id="radio">
+                <input type="radio" name="canvassize" value="large" id="large">
                 <label for="large">large</label>
         </div>
-        </form>
     </div>
 </body>
 
