--- a/Abschlussarbeit/Code/index.html
+++ b/Abschlussarbeit/Code/index.html
@@ -33,7 +33,7 @@
         <canvas width="500" height="300"></canvas>
 
         <div class="color">
-            <div id="wand" class="wanddiv"><img src="palette.svg" class="palette"></div>
+            <div id="paletteid" class="wanddiv"><img src="palette.svg" class="palette"></div>
             <div id="red" class="redcolor"></div>
             <div id="blue" class="bluecolor"></div>
             <div id="green" class="greencolor"></div>
