--- a/Abschlussarbeit/Code/index.html
+++ b/Abschlussarbeit/Code/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magic Canvas</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <script src="Main.js"></script>
 </head>
 
@@ -41,10 +40,10 @@
         </div>
 
         <div class="forms">
-            <img src="circle.svg" class="circleclass" id="circleicon">
-            <img src="triangle.svg" class="triangleclass" id="triangleicon">
-            <img src="square.svg" class="rectangleclass" id="squareicon">
-            <img src="flash.svg" class="flashclass" id="flashicon">
+            <div id="circleicon"><img src="circle.svg" class="circleclass"></div>
+            <div id="triangleicon"><img src="triangle.svg" class="triangleclass"></div>
+            <div id="squareicon"><img src="square.svg" class="rectangleclass"></div>
+            <div id="flashicon"><img src="flash.svg" class="flashclass"></div>
         </div>
 
         <p class="choose">Choose one:</p>
