--- a/Abschlussarbeit/Code/index.html
+++ b/Abschlussarbeit/Code/index.html
@@ -6,6 +6,8 @@
     <title>Magic Canvas</title>
     <link rel="stylesheet" href="style.css">
     <script src="Main.js"></script>
+    <script src="Circle.js"></script>
+    <script src="Vector.js"></script>
 </head>
 
 <body>
