Formen mit Farbe füllen

--- a/Abschlussarbeit/Code/index.html
+++ b/Abschlussarbeit/Code/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Magic Canvas</title>
     <link rel="stylesheet" href="style.css">
-    <script src="Main.js"></script>
-    <script src="Circle.js"></script>
     <script src="Vector.js"></script>
+    <script src="CanvasElement.js"></script>
+    <script src="Main/Main.js"></script>
 </head>
 
 <body>
@@ -34,7 +34,6 @@
         <canvas width="500" height="300"></canvas>
 
         <div class="color">
-            <div id="paletteid" class="wanddiv"><img src="palette.svg" class="palette"></div>
             <div id="red" class="redcolor"></div>
             <div id="blue" class="bluecolor"></div>
             <div id="green" class="greencolor"></div>
@@ -42,10 +41,10 @@
         </div>
 
         <div class="forms">
-            <div id="circleicon"><img src="circle.svg" class="circleclass"></div>
-            <div id="triangleicon"><img src="triangle.svg" class="triangleclass"></div>
-            <div id="squareicon"><img src="square.svg" class="rectangleclass"></div>
-            <div id="flashicon"><img src="flash.svg" class="flashclass"></div>
+            <div id="circleicon"><img src="assets/circle.svg" class="circleclass"></div>
+            <div id="triangleicon"><img src="assets/triangle.svg" class="triangleclass"></div>
+            <div id="squareicon"><img src="assets/square.svg" class="rectangleclass"></div>
+            <div id="flashicon"><img src="assets/flash.svg" class="flashclass"></div>
         </div>
 
         <p class="choose">Choose one:</p>
