--- a/Abschlussarbeit/Code/index.html
+++ b/Abschlussarbeit/Code/index.html
@@ -41,10 +41,10 @@
         </div>
 
         <div class="forms">
-            <div id="circleicon"><img src="assets/circle.svg" class="circleclass"></div>
-            <div id="triangleicon"><img src="assets/triangle.svg" class="triangleclass"></div>
-            <div id="squareicon"><img src="assets/square.svg" class="rectangleclass"></div>
-            <div id="flashicon"><img src="assets/flash.svg" class="flashclass"></div>
+            <div id="circleicon" class="circlediv"><img src="assets/circle.svg" class="circleclass"></div>
+            <div id="triangleicon" class="trianglediv"><img src="assets/triangle.svg" class="triangleclass"></div>
+            <div id="squareicon" class="squarediv"><img src="assets/square.svg" class="rectangleclass"></div>
+            <div id="flashicon" class="flashdiv"><img src="assets/flash.svg" class="flashclass"></div>
         </div>
 
         <p class="choose">Choose one:</p>
