save + delete Funktion

--- a/Abschlussarbeit/Code/index.html
+++ b/Abschlussarbeit/Code/index.html
@@ -33,7 +33,7 @@
         </div>
         <canvas width="500" height="300"></canvas>
 
-        <div class="color">
+        <div class="color" id="colordiv">
             <div id="red" class="redcolor"></div>
             <div id="blue" class="bluecolor"></div>
             <div id="green" class="greencolor"></div>
