--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,8 +15,8 @@
         <br>
         <p><a href="https://github.com/celine333/EIA_2" target="_blank">Repository</a></p>
         <p><a href="https://celine333.github.io/EIA_2/Abschlussarbeit/Code/index.html" target="_blank">Endabgabe_Anwendung |</a>
-        <a href="https://celine333.github.io/EIA_2/Abschlussarbeit" target="_blank">Code und Konzept |</a></p>
-        <a href="https://celine333.github.io/EIA_2/" target="_blank">Zip Ordner</a></p>
+        <a href="https://github.com/celine333/EIA_2/tree/master/Abschlussarbeit" target="_blank">Code und Konzept |</a></p>
+        <a href="https://github.com/celine333/EIA_2" target="_blank">Zip Ordner</a></p>
 
         <p><a href="https://celine333.github.io/EIA_2/Aufgabe_11/Konzept_Aufgabe11.pdf" target="_blank">Aufgabe11_pdf |</a>
         <a href="https://celine333.github.io/EIA_2/Aufgabe_11/Virus.html" target="_blank">Aufgabe11_html</a></p>
